--- a/Day 29/homework/why.html
+++ b/Day 29/homework/why.html
@@ -1,6 +1,6 @@
 
-<h1>Why should you choose football ?</h1>
-     <p>
+<h1 style=color:rgb(6,85,165)>Why should you choose football ?</h1>
+     <p style=background-color:rgb(142,220,135)>
         <br>Choosing football as a sport offers numerous benefits. It promotes
         <br>physical fitness, including cardiovascular health, muscular 
         <br>strength, and endurance. Additionally, it enhances 
