--- a/Day 33/homework/Codege.html
+++ b/Day 33/homework/Codege.html
@@ -1,52 +1,91 @@
 <html>
     <head>
-        <div>
            <style>
                #btn {
                    background-color:white;
                    color:black;
-
                }
-               button {
+               #service {
                    background-color:blue; 
                    color:white
                }
+               body
+               #Discover_more {
+                   text-align: center;
+                   background-color:blue; 
+                   color:white
+               }
+               #pers_info_shortly {
+                font: size 10px;
+
+               }
            </style>
-        </div>
-        <header>
-
-                <button id="btn"> <a href="Blog.html">Blog</a></button>
-                <button id="btn"> <a href="About.html">About</a></button>
-                <button id="btn"> <a href="Contact.html">Contact</a></button>
-                <button id="btn"> <a href="Pricing.html">Pricing</a></button>
-                <button id="btn"> <a href="SignUp.html">Sign up</a></button>
-
-            <u><h5>WE PROVIDE OUTSOURCED</h5></u>
-
-            <h1>IT Solution Service
-                <br>For All Agency
-            </h1>
-            <p>Set the trends for desktop & server virtualization technology</p>
-
-            <button>see all service</button>
-        </header>
     </head>
     <body>
+        <header>
+
+            <button id="btn"> <a href="Blog.html">Blog</a></button>
+            <button id="btn"> <a href="About.html">About</a></button>
+            <button id="btn"> <a href="Contact.html">Contact</a></button>
+            <button id="btn"> <a href="Pricing.html">Pricing</a></button>
+            <button id="btn"> <a href="SignUp.html">Sign up</a></button>
+
+        <u><h5>WE PROVIDE OUTSOURCED</h5></u>
+
+        <h1>IT Solution Service
+            <br>For All Agency
+        </h1>
+        <p>Set the trends for desktop & server virtualization technology</p>
+
+        <button id="service">see all service</button>
+        </header>
         <main>
-            <section style=text-align:center>
+            <section style=text-align:left>
                     <h5 style= color:grey>About</h6>
                     <h2>IT Solution Service 
                     <br>From Experienced 
                         Engineer.</h2>
                     <p style= color:grey>
-                        <br>at posuere tellus. Ut sed dui justo. 
+                        at posuere tellus. Ut sed dui justo. 
                         <br>scelerisque turpis arcu, ut pulvinar lectus 
                         <br>tristique non
                     </p>
-            </section>
-            <aside style=text-align:left>
+                    <button id="Discover_more">Discover more</button>
+
+            <div style=text-align:left>
                     <img style=width:200px src="It engeneer.png" alt="engeneers photo">
-            </aside>
+            </div>
         </main>
+        <footer>
+            <section style= background-color:rgb(4,4,57);text-align:center>
+                    <p style= color:white>Important Links</p>
+                <br><button id="batoni"> <a href="Blog.html">Blog</a></button>
+                <br><button id="batoni"> <a href="About.html">About</a></button>
+                <br><button id="batoni"> <a href="Contact.html">Contact</a></button>
+                <br><button id="batoni"> <a href="Pricing.html">Pricing</a></button>
+                <br><button id="batoni"> <a href="SignUp.html">Sign up</a></button>
+
+            <aside id="email_input" style= color:white;text-align:right>
+                <form>
+                    <input type="email" placeholder="Enter your email" required>
+                    <br><button>submit</button>
+                </form>
+            </aside>
+            <aside id="pers_info_shortly"style= color:white;text-align:left>  
+                <font size="-1">
+                <p>Duis at porttitor urna, eu cursus 
+                    <br>tortor. Vestibulum magna metus, 
+                    <br>tempor id arcu ac, convallis
+                </p>
+                <p>
+                    <b>Address:</b>Durham Street Hialeah, FL 
+                <br>33010, USA
+                </p>
+                <p><b>Telephone:</b> +995 555 400 015</p>
+                <p><b>Email:</b> kvlividzesaba0@gmail.com</p>
+                </font>
+            </aside> 
+          </section>
+        </footer>
     </body>
 </html>
