--- a/Day 40 /homework/main.html
+++ b/Day 40 /homework/main.html
@@ -70,7 +70,7 @@
                 text-align: center;
             }
             #contact_me_p {
-                color:rgb(219, 213, 213);
+                color: rgb(22, 22, 62);
                 text-align: center;
                 border: 2px;
                 border-style: solid;
@@ -79,7 +79,7 @@
 
             }
             .social_media {
-                color:rgb(219, 213, 213);
+                color:rფgb(22, 22, 62);
                 text-align: center;
             }
         </style>
